# social-surveyor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
deploy/: README.md  bootstrap-ec2.sh  deploy.sh  label-prod.sh  seed-ssm.sh  social-surveyor@.service
deploy/pulumi/: Pulumi.opendata.example.yaml  Pulumi.yaml  __main__.py
docs/: getting-started.md
projects/example/: categories.yaml  routing.yaml
projects/example/sources/: x.yaml  (+3 more)
projects/opendata/: categories.yaml  classifier.yaml  routing.yaml  triage_20260418_0530.md  triage_20260418_0531.md
projects/opendata-brand/: categories.yaml  classifier.yaml  routing.yaml
src/social_surveyor/: classifier.py  cli.py  cli_classify.py  cli_digest.py  cli_eval.py  cli_explain.py  cli_ingest.py  cli_label.py  cli_route.py  cli_setup.py  cli_silence.py  cli_stats.py  cli_triage.py  config.py  cost_caps.py  eval_metrics.py  labeling.py  log_config.py  notifier.py  router.py  scheduler.py  secrets.py  storage.py  types.py
tests/: conftest.py  test_categories.py  test_classifier.py  test_cli_classify.py  test_cli_db_path.py  test_cli_digest.py  test_cli_eval.py  test_cli_explain.py  test_cli_ingest.py  test_cli_label.py  test_cli_multi_source.py  test_cli_setup.py  test_cli_silence.py  test_cli_triage.py  test_config.py  test_cost_caps.py  test_deploy_sh.py  test_eval_metrics.py  test_github.py  test_hackernews.py  test_label_prod_sh.py  test_labeling.py  test_notifier.py  test_reddit.py  test_reddit_api.py  test_router.py  test_scheduler.py  test_secrets.py  test_stats.py  test_storage.py  test_x.py  test_x_cost_control.py
tests/fixtures/: github_issue_comments.json  github_search_issues.json  hackernews_search.json  reddit_search_devops.xml  x_recent_search.json
(+16 files in other folders)
